name:                website
synopsis:            Build system and source files for https://cressent.org
version:             0.1.0.0
cabal-version:       >=1.10
author:              Cyril Cressent
maintainer:          cyril@cressent.org
license:             MIT
license-file:        LICENSE
homepage:            https://github.com/ccressent/cressent.org
bug-reports:         https://github.com/ccressent/cressent.org/issues
build-type:          Simple
extra-tmp-files:     _cache,
                     _site

executable website
  main-is:             website.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 4.8,
                       hakyll >= 4.5.3 && < 5,
                       containers,
                       time,
                       old-locale
  ghc-options:         -threaded -O2 -Wall
  default-language:    Haskell2010
